# OpenGL_tutorial

./: .gitignore  CMakeLists.txt  Makefile
dependencies/glad/: glad.h
src/: config.h  glad.c  main.cpp
src/shaders/: fragment.glsl  vertex.glsl
